# MisinfoMe_backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  data.py  database.py  evaluate.py  model.py  pyproject.toml  relationships.json  requirements.in  requirements.txt  responses_sample.jsonc  results.py  server.py  supervisord.conf  twitter.py  unshortener.py  url_redirect_manager.py  urls.json  utils.py  wsgi.conf.py  wsgi.py
.github/workflows/: main.yaml
api/: README.md  app.py  utils.py
api/credibility/: README.md  credibility_connector.py  graph.py
api/credibility/sources/: datasets_resources.py  ifcn.py  interface.py
api/data/: data.py  database.py  twitter.py  twitter_connector.py  twitter_old.py  unshortener.py  url_redirect_manager.py  utils.py  webarchives.py  webarchives_solution.py
api/evaluation/: evaluate.py
api/model/: README.md  __init__.py  analysis_manager.py  credibility_manager.py  entity_manager.py  jobs_manager.py  stats_manager.py  utils_manager.py
api/resources/: __init__.py  analysis_views.py  credibility_views.py  data_views.py  entity_views.py  frontend_v2_views.py  jobs_views.py  sparql_views.py  static_resources.py  stats_views.py  statuses.py  twitter_views.py  utils_views.py
evaluation/: evaluation.py
examples/: README.md  analyse_text_kfc_dearbour.jsonc  analyse_tweet_1.jsonc  analyse_tweet_2.jsonc  analyse_url_kfc_dearborn.jsonc
test/: test.sh  test_tweets.tavern.yaml  test_twitter_accounts.tavern.yaml
tests/: README.md  includes.yaml  test_rest_api.py
