[tool.pdm]

[project]
name = "backend"
version = "0.1.0"
description = "Backend for MisinfoMe"
authors = [{ name = "Martino Mensio", email = "martino.mensio@open.ac.uk" }]
dependencies = [
    "redis",
    "requests",
    "certifi",
    "python-dotenv",
    "validators",
    "tqdm",
    "tldextract",
    "regex",
    "pymongo",
    "dateparser",
    "beautifulsoup4",
    "lxml",
    "celery",
    "supervisor",
    "fastapi",
    "uvicorn",
    # the following are for security constraints
    "urllib3>=1.26.18",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies] # This is dev dependencies
dev1 = ["black", "httpx", "pytest", "coveralls"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
